# OsuNP

./: Cargo.toml  readme.md
src/: main.rs  status_message.rs
