[package]
name = "osu_reporter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { features = ["json", "blocking"] }